feat: Impl draft editor api
